input.css
*,
*::after,
*::before {
	margin: 0;
	box-sizing: border-box;
}

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}
body {
	line-height: 1;
}
ol,
ul {
	list-style: none;
}
blockquote,
q {
	quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

body {
	display: grid;
	place-items: center;
	height: 100vh;
	background-image: linear-gradient(to bottom, #84ceff, #c6f5ff);
}

.main-box {
	display: flex;
	gap: 1em;
}

.left-pane,
.right-pane,
.middle-pane {
	display: grid;
	gap: 1em;
	justify-content: stretch;
	background-color: #fff8;
	border-radius: 10px;
	border: 1px solid #0684;
	padding: 1em;
	box-shadow: 0 10px 30px -10px #0062;
}

.info-card {
	display: grid;
	justify-items: center;
	gap: 0.8em;
	background-color: #fff8;
	padding: 0.8em;
	border-radius: 5px;
}

.throbber {
	height: 16px;
	display: none;
}

h3,
i {
	opacity: 0.6;
	padding-inline: 4px;
}

.middle-pane {
	grid-template-rows: 3fr 2fr;
}

.city-container {
	display: grid;
	grid-template-rows: 2fr repeat(4, 1fr);
	width: min(400px, 30vw);
	justify-items: center;
	overflow: hidden;
	border-radius: 5px;
	background-color: #fff8;
	padding-bottom: 1em;
}

.city-container > * {
	font-size: 1.2rem;
	display: grid;
	place-items: center;
}

.city-container > h1.city {
	font-size: 2em;
	text-shadow: 1px 3px 8px #0004;
	background-color: #fff8;
	width: 100%;
	text-transform: uppercase;
}

.city-container > p {
	font-size: 0.9em;
	padding-top: 1em;
	border-top: 1px solid #0001;
	width: 100%;
}

.weather {
	text-transform: uppercase;
}

.input-box {
	display: grid;
	gap: 1em;
}

.search-input {
	border: 1px solid #adf;
	background-color: #fffa;
	border-radius: 5px;
	padding-inline: 1em;
	box-shadow: 0 3px 10px -3px #0042;
}

button {
	border: none;
	border-radius: 5px;
	background-color: #fff;
	cursor: pointer;
	transition: 100ms;
	background-color: #0088ff;
	color: white;
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 10px;
}

button:hover {
	box-shadow: 0 3px 10px #0462;
	transform: translateY(-5px);
}

button:active {
	scale: 0.96;
}

dialog::backdrop {
	backdrop-filter: blur(5px);
	background-color: #fff8;
}

dialog {
	border: 1px solid #0452;
	border-radius: 10px;
	box-shadow: 0 5px 20px -5px #0344;
	background-color: rgba(245, 251, 255);
	margin: auto;
	padding: 0;
	animation: modal 200ms;
}

@keyframes modal {
	0% {
		margin-inline: auto;
		margin-top: 4rem;
	}

	100% {
		margin: auto;
	}
}

.modal-content {
	display: grid;
	gap: 2em;
	padding: 1em;
}

.modal-top {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.form {
	display: grid;
	grid-template-columns: 30px 1fr;
	gap: 1em;
}

input[type='radio'] {
	accent-color: #0088ff;
	height: 30px;
	width: 30px;
}

.button-box {
	display: flex;
	justify-content: space-between;
	gap: 1em;
	height: 40px;
}

.button-box > * {
	flex: 1;
	cursor: pointer;
}

.submit-button {
	background-color: #0088ff;
	color: white;
}

.cancel-button {
	background-color: #ff4466;
	color: white;
}

.close-modal {
	background-color: transparent;
	color: black;
	margin-right: -5px;
	margin-top: 5px;
}

@media screen and (max-width: 700px) {
	body {
		height: unset;
		margin-block: 1em;
	}

	h1 {
		color: rgb(0, 19, 68);
	}

	.main-box {
		display: grid;
		grid-template-areas: 'middle-pane middle-pane' 'left-pane right-pane';
	}

	.middle-pane {
		grid-area: middle-pane;
		justify-items: stretch;
		grid-template-rows: 3fr 1fr;
	}

	.left-pane {
		grid-area: left-pane;
		width: 44vw;
	}

	.right-pane {
		grid-area: right-pane;
		width: 44vw;
	}

	.city-container {
		width: 100%;
	}

	.input-box {
		grid-template-areas: 'input input' 'left-button right-button';
		grid-template-columns: 1fr 1fr;
		height: 100px;
	}

	.search-input {
		grid-area: input;
	}
}

